--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>Basking Snake Yoga</title>
 </head>
 <body>
-	<h1> Basking Snake Yoga </h1>
-	<p> This is a test </p>
+	<h1>Basking Snake Yoga </h1>
+	<p> This is a test. this is still a test, test test test test </p>
+	<h2>small header</h2>
 </body>
 </html>
